dating/frontend/style/_forms.scss
.input-group {
    position: relative;
    margin-bottom: 4px;
    min-height: 3.5rem;
    width: 100%;

    .errors {
        position: absolute;
        top: 1.7rem;
        left: 0;
        color: #ff6a50;
        font-size: 0.7rem;
        line-height: 0.8rem;
        margin: 0.4rem 0 2rem 0;

        animation-name: errors-swoop-down;
        animation-duration: 0.2s;
    }

    @keyframes errors-swoop-down {
        from {
            opacity: 0;
            top: 1.0rem;
        }
        to {
            opacity: 1;
            top: 1.7rem;
        }
    }

    input {
        position: absolute;
        width: 100%;
        height: 2rem;
        border: 0;
        border-bottom: 2px solid $txt-col-light;
        background: none;
        transition: background-color 0.15s ease;
        -webkit-appearance: none;
        z-index: 1;

        &:hover {
            background: rgba(0, 0, 0, 0.05);
        }

        &::placeholder {
            color: transparent;
        }

        &:not(:placeholder-shown) ~ .label {
            color: $txt-col-light;
            transform: translateY(-1.2rem) scale(.80)
        }

        &:focus {
            background: none;
            outline: none;

            ~ .label {
                cursor: default;
                color: $pri-col-dark;
                transform: translateY(-1.2rem) scale(.80);
            }
            ~ .border {
                transform: scaleX(1)
            }
        }
    }

    span {
        position: absolute;
        transform-origin: 0 0;
        transition: all .2s ease;
    }

    .label {
        @extend %txt-label;
        top: 0.2rem;
        left: 0;
        cursor: text;
        z-index: 0;

        &:after {
            @extend %material-icon;

            content: "clear";
            line-height: 1.4rem;
        }
    }

    &.empty .label:after {
        content: "";
    }

    &.valid .label:after {
        content: "done";
    }

    &.pending .label:after {
        content: "more_horiz";
    }


    .border {
        top: calc(2rem - 2px);
        left: 0;
        height: 2px;
        width: 100%;
        background: $pri-col-dark;
        transform: scaleX(0);
        z-index: 1;
    }
}

.radio-group {
    position: relative;
    min-height: 3.5rem;
    width: 100%;

    label:first-of-type {
        position: absolute;
        top: -1rem;
        display: inline-block;
        color: $txt-col-light;
        transform: scale(0.8);
        transform-origin: 0 0;

        transition: color 0.15s ease;
    }

    &:focus-within label:first-of-type {
        color: $pri-col-dark;
    }

    .radio-label-group {
        display: inline-block;
        position: relative;
        top: 0.25rem;
        margin-right: 2rem;
        padding-left: 1.4rem;
        cursor: pointer;

        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
        transition: color 0.15s ease;

        &:focus-within {
            color: $pri-col-dark;
        }

        // Darken radio button on hover
        &:hover input ~ .checkmark {
            background-color: $bg-col-dark;
        }

        // Color radio button on click
        &:active input ~ .checkmark {
            background-color: $pri-col-light;
        }

        // Hide default radio button
        input {
            //display: none;
            position: absolute;
            opacity: 0;
            cursor: pointer;

            &:checked ~ .checkmark {
                background-color: $pri-col;

                // Display indicator inside radio button
                &:after {
                    display: block;
                }
            }
        }

        // Create a custom radio button
        .checkmark {
            position: absolute;
            top: 2px;
            left: 0;
            height: 15px;
            width: 15px;
            background-color: $bg-col-light;
            border-radius: 50%;
            transition: background 0.15s ease;

            // Create indicator inside radio button (hidden)
            &:after {
                content: "";
                position: absolute;
                display: none;
                top: 5px;
                left: 5px;
                width: 5px;
                height: 5px;
                border-radius: 50%;
                background: white;
            }
        }
    }
}

.image-input-group {
    position: relative;
    padding-bottom: 75%;
    background-color: $bg-col-light;
    background-size: cover;

    &.no-image {
        border: 4px dashed $pri-col-dark;
    }

    & > div {
        text-align: center;
        position: relative;
        top: calc(50% - 1.4rem);
    }

    input {
        display: none;
    }
}

